baml_language/crates/baml_tests/snapshots/function_types/baml_tests__function_types__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ITEMS ===
function GetTransform() -> (x: int) -> int {
    1
}

type Complex = (items: int[], lookup: map<string, int>) -> string?

type stream_FunctionFactory = <error>

type stream_UnionParam = <error>

type Curried = (x: int) -> (y: int) -> int

type IntToInt = (x: int) -> int

type stream_MixedParams = <error>

type Producer = () -> string

type UnionParam = (value: int | string) -> bool

type MixedParams = (x: int, int, z: string) -> bool

type stream_BinaryOp = <error>

type stream_Complex = <error>

type BinaryOp = (a: int, b: int) -> int

type stream_UnnamedParams = <error>

type UnnamedParams = (int, int) -> int

type FunctionFactory = (config: string) -> (int) -> int

type stream_Producer = <error>

type stream_Curried = <error>

type stream_IntToInt = <error>
