baml_language/crates/baml_tests/snapshots/function_types/baml_tests__function_types__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.GetTransform() -> (int) -> int {
    // Locals:
    let _0: (int) -> int // _0 // return

    bb0: {
        _0 = const 1_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
