baml_language/crates/baml_tests/snapshots/function_types/baml_tests__function_types__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unreachable arm
     ╭─[ llm_types.baml:152:17 ]
     │
 152 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:189:17 ]
     │
 189 │ ╭─▶             _ => {
     ┆ ┆   
 194 │ ├─▶             }
     │ │                   
     │ ╰─────────────────── unreachable arm
     │     
     │     Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:208:17 ]
     │
 208 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: type mismatch: expected (x: int) -> int, got 1
    ╭─[ function_types.baml:25:5 ]
    │
 25 │     1
    │     ┬  
    │     ╰── type mismatch: expected (x: int) -> int, got 1
    │ 
    │ Note: Error code: E0001
────╯
